--- a/stylehome/templates/layout/base.html
+++ b/stylehome/templates/layout/base.html
@@ -27,6 +27,7 @@
 	<!-- This file stores project-specific CSS -->
 	{% endblock extra_css %}
 
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 	{% block extra_javascript %}
 	<!-- Your stuff: Third-party javascript libraries go here -->
 	<!-- place project specific Javascript in this file -->
