rgb,login,register

--- a/stylehome/apps/shop/templates/shop.html
+++ b/stylehome/apps/shop/templates/shop.html
@@ -87,7 +87,7 @@ Shop
 		</div>
 	</aside>
 	<article>
-		<h2 class="mb-5">Dormitorio</h2>
+		<h2 class="mb-5">Productos</h2>
 		<div class="row">
 			{% for product in products %}
 			<div class="col-12 col-md-4 col-lg-3 mb-3">
