--- a/stylehome/apps/client/templates/login.html
+++ b/stylehome/apps/client/templates/login.html
@@ -19,36 +19,36 @@ Login
             </div>
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
-
-                <form>
-
+                <form method="post" action="{% url 'post' %}">
+                  {% csrf_token %}
                   <div class="d-flex align-items-center mb-3 pb-1">
-                    <i class="fas fa-cubes fa-2x me-3"></i>
-                    <span class="h1 fw-bold mb-0">StyleHome</span>
+                      <i class="fas fa-cubes fa-2x me-3"></i>
+                      <span class="h1 fw-bold mb-0">StyleHome</span>
                   </div>
-
                   <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Iniciar Sesión</h5>
-
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="email" id="form2Example17" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example17">Email address</label>
+                      <input type="email" name="email" id="form2Example17" class="form-control form-control-lg" required />
+                      <label class="form-label" for="form2Example17">Email address</label>
                   </div>
-
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="password" id="form2Example27" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example27">Password</label>
+                      <input type="password" name="password" id="form2Example27" class="form-control form-control-lg" required />
+                      <label class="form-label" for="form2Example27">Password</label>
                   </div>
-
                   <div class="pt-1 mb-4">
-                    <a href="{% url 'profile' %}"><button data-mdb-button-init data-mdb-ripple-init
-                        class="btn btn-dark btn-lg btn-block" type="button">Login</button></a>
+                      <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
                   </div>
-
-                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="{% url 'register' %}"
-                      style="color: #393f81;">Register here</a></p>
+                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="{% url 'register' %}" style="color: #393f81;">Register here</a></p>
                   <a href="#!" class="small text-muted">Terms of use.</a>
                   <a href="#!" class="small text-muted">Privacy policy</a>
-                </form>
+                  {% if messages %}
+                  <ul>
+                      {% for message in messages %}
+                          <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                      {% endfor %}
+                  </ul>
+                  {% endif %}
+              </form>
+
 
               </div>
             </div>
