--- a/stylehome/apps/client/templates/register.html
+++ b/stylehome/apps/client/templates/register.html
@@ -20,49 +20,59 @@ Register
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
 
-                <form>
-
+                <form method="get" action="{% url 'register_user' %}">
+                  {% csrf_token %}
                   <div class="d-flex align-items-center mb-3 pb-1">
-                    <i class="fas fa-cubes fa-2x me-3"></i>
-                    <span class="h1 fw-bold mb-0">StyleHome</span>
+                      <i class="fas fa-cubes fa-2x me-3"></i>
+                      <span class="h1 fw-bold mb-0">StyleHome</span>
                   </div>
-
-                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Ingresar</h5>
+              
+                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Registrarse</h5>
                   
-                    <div data-mdb-input-init class="form-outline mb-2">
-                      <input type="text" id="form2Example21" class="form-control form-control-lg" />
-                      <label class="form-label" for="form2Example21">Nombres</label>
-                    </div>
-                    
-                    <div data-mdb-input-init class="form-outline mb-2">
-                        <input type="text" id="form2Example22" class="form-control form-control-lg" />
-                        <label class="form-label" for="form2Example22">Apellidos</label>
-                    </div>
-                    
-                    
-                    <div data-mdb-input-init class="form-outline mb-2">
-                      <input type="email" id="form2Example17" class="form-control form-control-lg" />
-                      <label class="form-label" for="form2Example17">Correo</label>
-                    </div>  
-
-                    <div data-mdb-input-init class="form-outline mb-2">
-                      <input type="password" id="form2Example23" class="form-control form-control-lg" />
-                      <label class="form-label" for="form2Example23">Contraseña</label>
-                    </div>
-
-                    <div data-mdb-input-init class="form-outline mb-2">
-                      <input type="password" id="form2Example24" class="form-control form-control-lg" />
-                      <label class="form-label" for="form2Example24">Confirmar contraseña</label>
-                    </div>
-
-                  <div class="pt-1 mb-3">
-                    <a href="{% url 'profile' %}"><button data-mdb-button-init data-mdb-ripple-init
-                        class="btn btn-dark btn-lg btn-block" type="button">Register</button></a>
+                  <div data-mdb-input-init class="form-outline mb-2">
+                      <input name="name" type="text" id="form2Example21" class="form-control form-control-lg" />
+                      <label class="form-label" for="form2Example21" name="name">Nombre</label>
+                  </div>
+                  
+                  <div data-mdb-input-init class="form-outline mb-2">
+                      <input name="last_name" type="text" id="form2Example22" class="form-control form-control-lg" />
+                      <label class="form-label" for="form2Example22"  name="last_name">Apellidos</label>
                   </div>
 
+                  <div data-mdb-input-init class="form-outline mb-2">
+                    <select name="municipality" id="form2Example25" class="form-control form-control-lg">
+                        {% for municipality in municipalities %}
+                            <option value="{{ municipality.id }}">{{ municipality.name }}</option>
+                        {% endfor %}
+                    </select>
+                    <label class="form-label" for="form2Example25">Municipio</label>
+                </div>
+                  
+                  <div data-mdb-input-init class="form-outline mb-2">
+                      <input name="email" type="email" id="form2Example17" class="form-control form-control-lg" />
+                      <label class="form-label" for="form2Example17" name="email" >Correo</label>
+                  </div>  
+              
+                  <div data-mdb-input-init class="form-outline mb-2">
+                      <input name="password" type="password" id="form2Example23" class="form-control form-control-lg" />
+                      <label class="form-label" for="form2Example23" name="password">Contraseña</label>
+                  </div>
+              
+                  <div data-mdb-input-init class="form-outline mb-2">
+                      <input name="confirmed_password" type="password" id="form2Example24" class="form-control form-control-lg" />
+                      <label class="form-label" for="form2Example24" name="confirmed_password" >Confirmar contraseña</label>
+                  </div>
+              
+                  <div class="pt-1 mb-3">
+                      <button data-mdb-button-init data-mdb-ripple-init
+                          class="btn btn-dark btn-lg btn-block" type="submit">Registrarse</button>
+                  </div>
+              
                   <a href="#!" class="small text-muted">Terms of use.</a>
                   <a href="#!" class="small text-muted">Privacy policy</a>
-                </form>
+              </form>
+              
+              
 
               </div>
             </div>
