--- a/stylehome/apps/client/templates/login.html
+++ b/stylehome/apps/client/templates/login.html
@@ -19,7 +19,7 @@ Login
             </div>
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
-                <form method="post" action="{% url 'post' %}">
+                <form method="post" action="{% url 'login' %}">
                   {% csrf_token %}
                   <div class="d-flex align-items-center mb-3 pb-1">
                       <i class="fas fa-cubes fa-2x me-3"></i>
