--- a/stylehome/templates/layout/base.html
+++ b/stylehome/templates/layout/base.html
@@ -99,26 +99,33 @@
 	<script>
 		if (document.startViewTransition) {
 			window.navigation.addEventListener('navigate', (event) => {
-				const toUrl = new URL(event.destination.url)
-		
-				if (location.origin !== toUrl.origin) return
-		
+				const toUrl = new URL(event.destination.url);
+	
+				// Allow full page loads for specific routes like login redirections
+				if (location.origin !== toUrl.origin || toUrl.pathname.startsWith('/login')) return;
+	
 				event.intercept({
 					async handler () {
-						const response = await fetch(toUrl.pathname)
-						const text = await response.text()
-						const [, data] = text.match(/<body>([\s\S]*)<\/body>/i)
-		
+						const response = await fetch(toUrl.pathname);
+						if (response.redirected) {
+							window.location = response.url;
+							return;
+						}
+						
+						const text = await response.text();
+						const [, data] = text.match(/<body>([\s\S]*)<\/body>/i);
+	
 						// View Transition API
 						document.startViewTransition(() => {
-							document.body.innerHTML = data
-							document.documentElement.scrollTop = 0
-						})
+							document.body.innerHTML = data;
+							document.documentElement.scrollTop = 0;
+						});
 					}
-				})
-			})
+				});
+			});
 		}
 	</script>
+	
 </body>
 
 </html>
