update meta tags

--- a/stylehome/templates/layout/base.html
+++ b/stylehome/templates/layout/base.html
@@ -10,6 +10,8 @@
 	<meta name="title" content="StyleHome" />
 	<meta name="description" content="Sitio web dedicado a la venta de muebles para el hogar" />
 	<meta name="author" content="StyleHome Team">
+	<!-- add the meta tag for local transitions -->
+	<meta name="view-transition" content="same-origin">
 	<link rel="shortcut icon" href="{% static 'images/favicon.png' %}">
 
 	<meta name="description" content="" />
