--- a/stylehome/apps/home/templates/home.html
+++ b/stylehome/apps/home/templates/home.html
@@ -40,7 +40,7 @@ Home
 					<h1>LOS MEJORES PRECIOS<span class="d-block colorfont"><h2 class="font30">SOLO PARA TI</h2>
 						MODERN FURNITURE</span></h1>
 					<p>
-						<a href="#" class="btn btn-white-outline">Ver ahora</a>
+						<a href="{% url 'shop' %}" class="btn btn-white-outline">Ver ahora</a>
 					</p>
 				</div>
 			</div>
