--- a/stylehome/static/core/css/personalized/librery.css
+++ b/stylehome/static/core/css/personalized/librery.css
@@ -94,7 +94,8 @@ Este archivo es para crear clases que modifique la estructura de los templates p
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 60%;
+    opacity: 40%;
+    border: 1px solid #7e7e7e;
 }
 
 .float-text{
