--- a/stylehome/apps/shop/templates/product.html
+++ b/stylehome/apps/shop/templates/product.html
@@ -63,7 +63,7 @@ Shop
                     <i class="fas fa-minus"></i>
                   </button>
 
-                  <input type="text" name="units" id="units" class="form-control text-center border border-secondary" placeholder="14" aria-label="Example text with button addon" aria-describedby="button-addon1" value="1">
+                  <input type="number" name="units" id="units" class="form-control text-center border border-secondary" placeholder="14" aria-label="Example text with button addon" aria-describedby="button-addon1" value="1">
 
                   <button class="btn btn-white border border-secondary px-3" type="button" id="plus" data-mdb-ripple-color="dark">
                     <i class="fas fa-plus"></i>
@@ -74,7 +74,7 @@ Shop
             </div>
 
             <a href="#" class="btn btn-warning shadow-0"> Buy now </a>
-            <a href="#" class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i> Add to cart </a>
+            <button type="submit" class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i> Add to cart </button>
             
           </div>
         </main>
